workshop/rest-heroes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: heroes-db
    application: heroes-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: heroes-service
    app.openshift.io/runtime: postgresql
  name: heroes-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: heroes-db
  template:
    metadata:
      labels:
        name: heroes-db
        application: heroes-service
        system: quarkus-super-heroes
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: heroes-db-config
          image: bitnami/postgresql:14
          name: heroes-db
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: heroes-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: heroes-db-init-data
      volumes:
        - emptyDir: {}
          name: heroes-db-data
        - emptyDir: {}
          name: heroes-db-init-data
        - configMap:
            name: heroes-db-init
          name: heroes-db-init
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: heroes-db
    application: heroes-service
    system: quarkus-super-heroes
  name: heroes-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: heroes-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "heroes-db,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:54 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8083"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java17-latest
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/version: java17-latest
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/connects-to: "heroes-db,otel-collector"
        app.openshift.io/vcs-ref: main
        app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:54 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8083"
        prometheus.io/scheme: http
        sidecar.istio.io/inject: "false"
      labels:
        app: rest-heroes
        version: v1
        application: heroes-service
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/part-of: heroes-service
        app.kubernetes.io/name: rest-heroes
        app.kubernetes.io/version: java17-latest
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/voravitl/rest-heroes:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-heroes
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "heroes-db,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:54 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8083"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java17-latest
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java17-latest
  type: ClusterIP
---
# apiVersion: route.openshift.io/v1
# kind: Route
# metadata:
#   annotations:
#     app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
#     app.openshift.io/connects-to: "heroes-db,otel-collector"
#     app.openshift.io/vcs-ref: main
#     app.quarkus.io/build-timestamp: 2022-11-18 - 15:29:54 +0000
#   labels:
#     app.kubernetes.io/name: rest-heroes
#     app.kubernetes.io/part-of: heroes-service
#     app.kubernetes.io/version: java17-latest
#     app: rest-heroes
#     application: heroes-service
#     system: quarkus-super-heroes
#     app.openshift.io/runtime: quarkus
#   name: rest-heroes
# spec:
#   host: ""
#   port:
#     targetPort: http
#   to:
#     kind: Service
#     name: rest-heroes
