workshop/gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fights-gateway
spec:
  servers:
    - hosts:
        - 'frontend-USER.apps.DOMAIN'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE # For TLS only use SIMPLE, for mTLS use MUTUAL
        credentialName: frontend-credential
  selector:
    istio: ingressgateway
