workshop/event-statistics-istio.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: project2
  name: event-statistics
  labels:
    kiali_wizard: request_routing
  annotations: ~
spec:
  host: event-statistics.project2.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
      consistentHash: ~
