workshop/event-statistics.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: <
      ["fights-kafka","apicurio","otel-collector",{"apiVersion":"apps/v1","kind":"StatefulSet","name":"fights-zookeeper"}]
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:30:39 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-statistics
    app.kubernetes.io/version: java17-latest
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/name: event-statistics
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
        app.openshift.io/vcs-ref: main
        app.quarkus.io/build-timestamp: 2022-11-18 - 15:30:39 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
        sidecar.istio.io/inject: "false"
      labels:
        app: event-statistics
        version: v1
        application: event-stats
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: java17-latest
        app.kubernetes.io/part-of: event-stats
        app.kubernetes.io/name: event-statistics
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/asuksunt/event-statistics:1.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: event-statistics
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
  # triggers:
  #   - imageChangeParams:
  #       automatic: true
  #       containerNames:
  #         - event-statistics
  #       from:
  #         kind: ImageStreamTag
  #         name: event-statistics:java17-latest
  #     type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:30:39 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2022-11-18 - 15:30:39 +0000
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: event-statistics
